Rearranged sections so model training is first and then bootstrapping

--- a/RandomSurvivalForest/hdfs_random_forest.ipynb
+++ b/RandomSurvivalForest/hdfs_random_forest.ipynb
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Liver"
+    "## Liver"
    ]
   },
   {
@@ -377,6 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load data and split into cancer subtypes\n",
+    "\n",
     "data_folder = \"/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/\"\n",
     "\n",
     "train_liver_data = pd.read_excel(os.path.join(data_folder, \"train_liver_feats_and_labels.xlsx\"))\n",
@@ -454,6 +456,7 @@
     }
    ],
    "source": [
+    "# Feature selection\n",
     "liver_vselected_features = calculate_vif(X_liver, 10)\n",
     "X_liver = liver_vselected_features\n",
     "\n",
@@ -476,6 +479,7 @@
     }
    ],
    "source": [
+    "# Drop feature if very low variance warning\n",
     "X_liver.drop(labels=['Contrast'], inplace=True, axis=1)\n",
     "print(X_liver.columns)"
    ]
@@ -486,168 +490,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Performing feature selection multiple times will give different results. \n",
+    "# Store results of the first run here so you don't have to run it again\n",
     "X_liver = X_liver.filter(items=['Contrast', 'Flatness', 'Strength', 'Skewness', 'Kurtosis', 'Busyness','Complexity', 'Variance', 'SurfaceArea'], axis=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overall Uno C: 0.542614371699287\n",
-      "HCC Uno C: 0.5123817712811694\n",
-      "ICC Uno C: 0.6368243243243243\n",
-      "MCRC Uno C: 0.5234499337001031\n"
-     ]
-    }
-   ],
    "source": [
-    "# X_liver = X_liver.filter(items=['Skewness', 'SurfaceArea', 'Variance', 'Contrast', \\\n",
-    "#     'Kurtosis', 'Flatness', 'Complexity', 'Busyness', 'Strength'], axis=1)\n",
-    "\n",
-    "avg_train_fold_results, avg_valid_fold_results, liv_best_fold_results, liv_best_fold_rsf = \\\n",
-    "                    kfold_train_survival_model(X_liver, t_liver, e_liver, num_trees=8, max_depth=5, min_node_size=15, k=5, seed=16)\n",
-    "\n",
-    "liver_h_c_ind, liver_u_c_stat, liver_ibs, liver_riskpreds = evaluate_forest(liv_best_fold_rsf, XT_liver, tT_liver, eT_liver)\n",
-    "\n",
-    "liverhcc_h_c_ind, liverhcc_u_c_stat, liverhcc_ibs, liverhcc_riskpreds = evaluate_forest(liv_best_fold_rsf, HCC_Xliver, HCC_tliver, HCC_eliver)\n",
-    "livericc_h_c_ind, livericc_u_c_stat, livericc_ibs, livericc_riskpreds = evaluate_forest(liv_best_fold_rsf, ICC_Xliver, ICC_tliver, ICC_eliver)\n",
-    "livermcrc_h_c_ind, livermcrc_u_c_stat, livermcrc_ibs, livermcrc_riskpreds = evaluate_forest(liv_best_fold_rsf, MCRC_Xliver, MCRC_tliver, MCRC_eliver)\n",
-    "\n",
-    "print(\"Overall Uno C:\", liver_u_c_stat)\n",
-    "print(\"HCC Uno C:\", liverhcc_u_c_stat)\n",
-    "print(\"ICC Uno C:\", livericc_u_c_stat)\n",
-    "print(\"MCRC Uno C:\", livermcrc_u_c_stat)"
+    "### Model Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_liver_confidence = pd.DataFrame(columns=['UnoC'])\n",
-    "\n",
-    "for x in range(1000):\n",
-    "    samp_liver = test_liver_data.sample(test_liver_data.shape[0], replace=True)\n",
-    "\n",
-    "    X_sampliver = samp_liver.drop(labels=[\"ScoutID\", \"HDFS_Time\", \"HDFS_Code\", \"Cancer_Type\"], axis=1)\n",
-    "    X_sampliver = X_sampliver.filter(items=['Contrast', 'Flatness', 'Strength', 'Skewness', 'Kurtosis', 'Busyness','Complexity', 'Variance', 'SurfaceArea'], axis=1)\n",
-    "    t_sampliver = samp_liver[\"HDFS_Time\"]\n",
-    "    e_sampliver = samp_liver[\"HDFS_Code\"]\n",
-    "\n",
-    "    _, sampliver_u_c_stat, _, _ = evaluate_forest(liv_best_fold_rsf, X_sampliver, t_sampliver, e_sampliver)\n",
-    "    \n",
-    "    df_liver_confidence.loc[x] = sampliver_u_c_stat\n",
-    "\n",
-    "\n",
-    "df_liver_confidence.to_excel(os.path.join(data_folder, \"RSF_liver_unoC_confidence_050722.xlsx\"), index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>UnoC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.636882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.557015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.558601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.549818</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.640180</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       UnoC\n",
-       "0  0.636882\n",
-       "1  0.557015\n",
-       "2  0.558601\n",
-       "3  0.549818\n",
-       "4  0.640180"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_liver_confidence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving the model to disk as /Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/liver_rsf_model_050722.zip\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/pysurvival/utils/__init__.py:132: FutureWarning: 'pyarrow.serialize' is deprecated as of 2.0.0 and will be removed in a future version. Use pickle or the pyarrow IPC functionality instead.\n",
-      "  model.save(path_file)\n"
-     ]
-    }
-   ],
-   "source": [
-    "save_model(liv_best_fold_rsf, '/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/liver_rsf_model_050722.zip')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -770,9 +627,8 @@
        "7   Complexity   -2.397426        0.000000"
       ]
      },
-     "execution_count": 69,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -825,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -835,9 +691,7 @@
        "<Figure size 1440x720 with 2 Axes>"
       ]
      },
-     "metadata": {
-      "needs_background": "light"
-     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -847,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +714,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tumor"
+    "### Final model selection and bootstrapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall Uno C: 0.542614371699287\n",
+      "HCC Uno C: 0.5123817712811694\n",
+      "ICC Uno C: 0.6368243243243243\n",
+      "MCRC Uno C: 0.5234499337001031\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model creation and evaluation\n",
+    "\n",
+    "avg_train_fold_results, avg_valid_fold_results, liv_best_fold_results, liv_best_fold_rsf = \\\n",
+    "                    kfold_train_survival_model(X_liver, t_liver, e_liver, num_trees=8, max_depth=5, min_node_size=15, k=5, seed=16)\n",
+    "\n",
+    "liver_h_c_ind, liver_u_c_stat, liver_ibs, liver_riskpreds = evaluate_forest(liv_best_fold_rsf, XT_liver, tT_liver, eT_liver)\n",
+    "\n",
+    "liverhcc_h_c_ind, liverhcc_u_c_stat, liverhcc_ibs, liverhcc_riskpreds = evaluate_forest(liv_best_fold_rsf, HCC_Xliver, HCC_tliver, HCC_eliver)\n",
+    "livericc_h_c_ind, livericc_u_c_stat, livericc_ibs, livericc_riskpreds = evaluate_forest(liv_best_fold_rsf, ICC_Xliver, ICC_tliver, ICC_eliver)\n",
+    "livermcrc_h_c_ind, livermcrc_u_c_stat, livermcrc_ibs, livermcrc_riskpreds = evaluate_forest(liv_best_fold_rsf, MCRC_Xliver, MCRC_tliver, MCRC_eliver)\n",
+    "\n",
+    "print(\"Overall Uno C:\", liver_u_c_stat)\n",
+    "print(\"HCC Uno C:\", liverhcc_u_c_stat)\n",
+    "print(\"ICC Uno C:\", livericc_u_c_stat)\n",
+    "print(\"MCRC Uno C:\", livermcrc_u_c_stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bootstrapping\n",
+    "df_liver_confidence = pd.DataFrame(columns=['UnoC'])\n",
+    "\n",
+    "for x in range(1000):\n",
+    "    samp_liver = test_liver_data.sample(test_liver_data.shape[0], replace=True)\n",
+    "\n",
+    "    X_sampliver = samp_liver.drop(labels=[\"ScoutID\", \"HDFS_Time\", \"HDFS_Code\", \"Cancer_Type\"], axis=1)\n",
+    "    X_sampliver = X_sampliver.filter(items=['Contrast', 'Flatness', 'Strength', 'Skewness', 'Kurtosis', 'Busyness','Complexity', 'Variance', 'SurfaceArea'], axis=1)\n",
+    "    t_sampliver = samp_liver[\"HDFS_Time\"]\n",
+    "    e_sampliver = samp_liver[\"HDFS_Code\"]\n",
+    "\n",
+    "    _, sampliver_u_c_stat, _, _ = evaluate_forest(liv_best_fold_rsf, X_sampliver, t_sampliver, e_sampliver)\n",
+    "    \n",
+    "    df_liver_confidence.loc[x] = sampliver_u_c_stat\n",
+    "\n",
+    "\n",
+    "df_liver_confidence.to_excel(os.path.join(data_folder, \"RSF_liver_unoC_confidence_050722.xlsx\"), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UnoC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.636882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.557015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.558601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.549818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.640180</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       UnoC\n",
+       "0  0.636882\n",
+       "1  0.557015\n",
+       "2  0.558601\n",
+       "3  0.549818\n",
+       "4  0.640180"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_liver_confidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving the model to disk as /Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/liver_rsf_model_050722.zip\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/pysurvival/utils/__init__.py:132: FutureWarning: 'pyarrow.serialize' is deprecated as of 2.0.0 and will be removed in a future version. Use pickle or the pyarrow IPC functionality instead.\n",
+      "  model.save(path_file)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "save_model(liv_best_fold_rsf, '/Data/FeatureSelection/HCC_MCRC_ICC_HDFS_90_10/liver_rsf_model_050722.zip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tumor"
    ]
   },
   {
@@ -982,6 +1000,20 @@
    "outputs": [],
    "source": [
     "X_tumor = X_tumor.filter(items=['Kurtosis', 'TotalEnergy', 'Maximum2DDiameterColumn', '10Percentile', 'MeshVolume'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Model and Bootstrapping"
    ]
   },
   {
@@ -1245,7 +1277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Liver and Tumor"
+    "## Liver and Tumor"
    ]
   },
   {
@@ -1349,6 +1381,20 @@
    "outputs": [],
    "source": [
     "X_livertumor = X_livertumor.filter(items=['SurfaceVolumeRatio', 'Flatness', 'Skewness', 'Strength', 'Kurtosis', 'Busyness', 'Complexity', 'Variance', 'TotalEnergy'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Model and Bootstrapping"
    ]
   },
   {
